Testing Azure continuous Deployment

--- a/myblog/templates/home.html
+++ b/myblog/templates/home.html
@@ -1,7 +1,7 @@
 <html>
  <head><title>Alieo Test Site</title></head>
  <body>
-   <h1>Alieogames Django Test with Database</h1>
+   <h1>Alieogames Django GitHub Test with Database</h1>
 {% for post in posts %}
 <h1>{{ post.title }}</h1>   
 <em> <time datetime="{{ post.date.isoformat }}">
